--- a/.github/workflows/tauri-android.yml
+++ b/.github/workflows/tauri-android.yml
@@ -66,7 +66,7 @@ jobs:
           ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
           NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-        run: pnpm --filter tauri-app tauri android build --target aarch64 --target armv7 --aab
+        run: pnpm --filter tauri-app tauri android build --target aarch64 --target armv7
 
       - name: Upload Android artifact
         uses: actions/upload-artifact@v4
