--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,6 +33,7 @@
     "cookie": "^1.0.2",
     "dedent": "^1.5.3",
     "diff-match-patch": "^1.0.5",
+    "docx": "^9.5.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.2",
     "howler": "^2.2.4",
